--- a/application.yaml
+++ b/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:mobounya/app-config.git
+    repoURL: https://github.com/mobounya/app-config.git
     targetRevision: HEAD
     path: dev
   destination:
