--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-      image: wil42/playground:1.0
-      ports:
-        containerPort: 8080
+        image: wil42/playground:v1
+        ports:
+        - containerPort: 8080
